syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.mgljava.proto3";
option java_outer_classname = "StudentProto";

package guide;

service StudentService {
  rpc getRealNameByUsername (MyRequest) returns (MyResponse) {
  }

  rpc getStreamRealName (MyRequest) returns (stream MyResponse) {
  }

  rpc getRealNameByStreamUsername (stream MyRequest) returns (MyResponse) {
  }

  rpc getStreamRealNameByStreamUsername (stream MyRequest) returns (stream MyResponse) {
  }
}

message MyRequest {
  string username = 1;
}

message MyResponse {
  string realname = 1;
}

message StudentResponse {

}

message StudentRequest {
  int32 age = 1;
}