syntax ="proto2";

package com.github.mgljava.protobuf.netty;

option optimize_for = SPEED;
option java_package = "com.github.mgljava.protobuf.netty";
option java_outer_classname="NettyDemoData";

message RequestUser{
  optional string user_name = 1;
  optional int32 age = 2;
  optional string password = 3;
}

message ResponseBank{
  optional string bank_no = 1;
  optional double money = 2;
  optional string bank_name=3;
}